# HNU_NHS_SENTRY

./: .gitignore  README.md  README_OpenCV.md  frames.gv  game.sh  mapping.sh  nav.sh  pre.sh  sim_start.sh
rm_auto_aim/armor_detector/include/armor_detector/: armor_detector.hpp  armor_detector_node.hpp  number_classifier.hpp
rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  number_classifier.cpp
rm_auto_aim/armor_solver/include/armor_solver/: armor_solver.hpp
rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
rm_auto_aim/auto_aim_bringup/config/node_params/: armor_solver_params.yaml
rm_auto_aim/auto_aim_bringup/launch/: auto_aim.launch.py
rm_communication/bubble_decision/bubble_decision/: decision.py  gameAction.py
rm_communication/bubble_decision/launch/: decision_launch.py
rm_description/launch/: model.launch.py
rm_description/urdf/: infantry.urdf.xacro  sentry.urdf.xacro
rm_navi/rm_driver/livox_ros_driver2/config/: MID360_config.json
rm_navi/rm_localization/icp_registration/config/: icp.yaml
rm_navi/rm_localization/pcd2pgm/: CMakeLists.txt
rm_navi/rm_localization/pcd2pgm/config/: pcd2pgm.yaml
rm_navi/rm_localization/pcd2pgm/map/: test.pgm  test.yaml  test_fl2.pgm  test_fl2.yaml
rm_navi/rm_localization/point_lio/config/: mid360.yaml
rm_navi/rm_localization/point_lio/launch/: mapping_mid360.launch.py
rm_navi/smart_escape/config/: nav2_params.yaml
rmu_gazebo_simulator/launch/: bringup_sim.launch.py  gazebo.launch.py  referee_system.launch.py  spawn_robots.launch.py
(+7 files in other folders)
